--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Desenvolvedor Front-end em Belo Horizonte">
     <title>Roger - Dev Front-end</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-emoticon-alien-emoji-soft-fill-soft-fill-juicy-fish-13.png" type="image/x-icon">
 </head>
 
 <body>
