--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <li> <a href="mailto:rogerdepaularpps@gmail.com">rogerdepaularpps@email.com</a> </li>
                     <li> <a href="https://api.whatsapp.com/send/?phone=5531994942582&text=Roger&app_absent=0" target="_blank" rel="noreferrer">31 99494-2582</a></li>
                     <li><a href="https://linkedin.com/in/rogerdepaula" target="_blank" rel="noreferrer">Linkedin</a></li>
-                    <li><a href="#" target="_self" rel="noreferrer">GitHub</a></li>
+                    <li><a href="https://github.com/rogerdepaula" target="_blank" rel="noreferrer">GitHub</a></li>
                 </ul>
                 <p class="footer-copy">Roger. Direitos reservados</p>
             </div>
